# testdata-rs

./: Cargo.toml  README.md
crates/e2e/: Cargo.toml
crates/e2e/tests/: test1.rs
crates/e2e/tests/fixtures/: bar2-pending.txt
crates/testdata-glob/: Cargo.toml
crates/testdata-glob/src/: lib.rs
crates/testdata-glob/tests/: expand_tests.rs  walk_tests.rs
crates/testdata-macros/: Cargo.toml
crates/testdata-macros/src/: attrs.rs  codegen.rs  lib.rs  sanitization.rs  testing.rs  tree.rs
crates/testdata-rt/: Cargo.toml
crates/testdata-rt/src/: fixtures.rs  glob_ext.rs  globbing.rs  lib.rs  patterns.rs  snapshots.rs  test_input.rs
crates/testdata-rt/src/formats/: json.rs  mod.rs
crates/testdata-rt/tests/: expand_tests.rs  walk_tests.rs
crates/testdata-walk/: Cargo.toml
crates/testdata-walk/src/: lib.rs
crates/testdata-walk/tests/: walk_tests.rs
src/: glob_ext.rs  lib.rs  util.rs
src/formats/: json.rs
tests/: diff.rs  e2e.rs  example.rs  expand_tests.rs  touch.rs
