[package]
name = "testdata"
version = "0.1.1-alpha.0"
edition = "2021"
# rust-version = ""
description = "File-based testing helper"
repository = "https://github.com/qnighy/testdata-rs"
license = "MIT OR Apache-2.0"
keywords = ["testing", "testcase", "test", "files", "snapshot"]
categories = ["development-tools::testing", "filesystem"]
include = [
    "/src",
    "/README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["testdata-rt/json"]
__doc_cfg = ["testdata-rt/__doc_cfg"]

[dependencies]
once_cell = "1.14.0"
testdata-rt = "0.1.0"
testdata-macros = "0.1.0"

[workspace]
members = [
    "crates/testdata-macros",
    "crates/testdata-rt",
    "crates/e2e",
]

[patch.crates-io]
testdata-macros = { path = "crates/testdata-macros" }
testdata-rt = { path = "crates/testdata-rt" }
