[package]
name = "testdata-macros"
version = "0.1.0"
edition = "2021"
# rust-version = ""
description = "File-based testing helper -- subpackage for proc-macro"
repository = "https://github.com/qnighy/testdata-rs"
license = "MIT OR Apache-2.0"
keywords = []
categories = ["development-tools::testing", "filesystem"]
include = [
    "/src",
    "/README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
once_cell = "1.14.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full"] }
testdata-rt = "0.1.0"
unicode-normalization = "0.1.21"
unicode-xid = "0.2.3"

[dev-dependencies]
big_s = "1.0.2"
maplit = "1.0.2"
pretty_assertions = "1.3.0"
