[package]
name = "testdata-rt"
version = "0.2.0-alpha.0"
edition = "2021"
# rust-version = ""
description = "File-based testing helper -- common runtime"
repository = "https://github.com/qnighy/testdata-rs"
license = "MIT OR Apache-2.0"
keywords = []
categories = ["development-tools::testing", "filesystem"]
include = [
    "/src",
    "/README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
json = ["dep:serde_json", "dep:serde"]
__doc_cfg = []

[dependencies]
bstr = "1.0.1"
bytemuck = { version = "1.12.1", features = ["derive"] }
path-slash = "0.2.1"
pretty_assertions = "1.3.0"
serde = { version = "1.0.145", features = ["derive"], optional = true }
serde_json = { version = "1.0.85", optional = true }
thiserror = "1.0.33"
utime = "0.3.1"
walkdir = "2.3.2"
